--- a/src/css/search.sass
+++ b/src/css/search.sass
@@ -11,3 +11,12 @@
 
 .g-text-weight
   font-weight: 500
+.g-card-width
+  min-width: 60%
+.g-text-roomType
+  font-size: 18px
+.g-background
+  background-color: #f3f3f3
+.g-border
+  border-radius: 10px
+  overflow: hidden
