--- a/src/css/search.sass
+++ b/src/css/search.sass
@@ -1,3 +1,8 @@
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button
+  -webkit-appearance: none
+  margin: 0
+
 .g-header
   text-transform: none
 .g-icon-h1
@@ -7,7 +12,7 @@
   font-size: 25px
 
 .g-header-up
- text-transform: capitalize
+  text-transform: capitalize
 
 .g-text-weight
   font-weight: 500
