--- a/src/css/search.sass
+++ b/src/css/search.sass
@@ -25,3 +25,6 @@ input::-webkit-inner-spin-button
 .g-border
   border-radius: 10px
   overflow: hidden
+$primary-label : #63A4FF
+.g-bg-primary-label
+  background-color: $primary-label
