chinh giao dien

--- a/src/css/search.sass
+++ b/src/css/search.sass
@@ -28,3 +28,7 @@ input::-webkit-inner-spin-button
 $primary-label : #63A4FF
 .g-bg-primary-label
   background-color: $primary-label
+$g-warning-noti : #bd8d09
+.g-bg-warning-noti
+  background-color: $g-warning-noti
+.g-t-warning
