--- a/src/css/search.sass
+++ b/src/css/search.sass
@@ -23,7 +23,7 @@ input::-webkit-inner-spin-button
 .g-background
   background-color: #f3f3f3
 .g-border
-  border-radius: 10px
+  border-radius: 10px !important
   overflow: hidden
 $primary-label : #63A4FF
 .g-bg-primary-label
