--- a/src/css/search.sass
+++ b/src/css/search.sass
@@ -31,3 +31,5 @@ $primary-label : #63A4FF
 $g-warning-noti : #bd8d09
 .g-bg-warning-noti
   background-color: $g-warning-noti
+.g-text-indent
+  text-indent: 30px
