--- a/src/css/search.sass
+++ b/src/css/search.sass
@@ -20,6 +20,8 @@ input::-webkit-inner-spin-button
   min-width: 60%
 .g-text-roomType
   font-size: 18px
+.g-size
+  font-size: 18px
 .g-background
   background-color: #f3f3f3
 .g-border
