--- a/src/css/search.sass
+++ b/src/css/search.sass
@@ -35,3 +35,5 @@ $g-warning-noti : #bd8d09
   background-color: $g-warning-noti
 .g-text-indent
   text-indent: 30px
+.g-display-inline
+  display: inline-block
