them chuc nang dong y

--- a/src/css/search.sass
+++ b/src/css/search.sass
@@ -37,3 +37,5 @@ $g-warning-noti : #bd8d09
   text-indent: 30px
 .g-display-inline
   display: inline-block
+.g-first-up::first-letter
+  text-transform: uppercase
