chinh border , table

--- a/src/css/search.sass
+++ b/src/css/search.sass
@@ -39,3 +39,6 @@ $g-warning-noti : #bd8d09
   display: inline-block
 .g-first-up::first-letter
   text-transform: uppercase
+
+.g-border-grey
+  border: 1px #E0E0E0 solid
